# Rust_EVM_Arbitrage_Bot

./: .env.example  Cargo.toml
checkpoints/: sushiswap.json
src/: constants.rs  main.rs
src/abi/: mod.rs
src/config/: mod.rs
src/execution/: limit_order.rs  mod.rs  sandbox_limit_order.rs
src/markets/: AllPools.rs  mod.rs
src/routing/: mod.rs
src/tests/: discover_erc_4626_vaults.rs  discover_factories.rs  mod.rs  simulate_swap.rs  swap_calldata.rs  sync_amms.rs
src/transactions/: mod.rs  mod_backup.rs  types.rs
