[package]
name = "amms-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amms = "0.6.1"
dotenv = "0.15.0"
ethers = { version = "2.0.11", default-features = true, features = ["abigen", "ws", "ipc", "rustls"] }
eyre = "0.6.11"
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = "0.3.18"

[dev-dependencies]
tracing-subscriber = "0.3.18"
