[package]
name = "amms-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amms = "0.6.1"
cfmms = "0.6.2"
clap = { version = "4.4.18", features = ["derive"] }
dotenv = "0.15.0"
ethabi = "18.0.0"
ethers = { version = "2.0.11", default-features = true, features = ["abigen", "ws", "ipc", "rustls"] }
eyre = "0.6.11"
futures = "0.3.30"
hex = "0.4.3"
indicatif = "0.17.8"
num-bigfloat = "1.7.0"
reqwest = "0.12.5"
serde = "1.0.195"
thiserror = "1.0.56"
throttle = "0.1.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = "0.3.18"
uniswap_v3_math = "0.4.1"

[dev-dependencies]
tracing-subscriber = "0.3.18"
